{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 191,
  "lineage": "4d96bf99-56b3-f0e0-870b-fe98089cda46",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:460996855651:loadbalancer/app/test-lb-tf/2b8305259df0857b",
            "arn_suffix": "app/test-lb-tf/2b8305259df0857b",
            "dns_name": "test-lb-tf-1058500470.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:460996855651:loadbalancer/app/test-lb-tf/2b8305259df0857b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-0d2ec541098efb9cf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01eafc3722717cc8f"
              },
              {
                "subnet_id": "subnet-063a8603eea215bac"
              }
            ],
            "subnets": [
              "subnet-01eafc3722717cc8f",
              "subnet-063a8603eea215bac"
            ],
            "vpc_id": "vpc-095b826a935f965cd",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_vpc.webapp_vpc",
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.web_app_subnet_a",
            "aws_subnet.web_app_subnet_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_elasticIP_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f04a2ce910e3dbc5",
            "domain": "vpc",
            "id": "eipalloc-0758b80ccabf334d0",
            "network_interface": "eni-01bebd8f58444935b",
            "private_dns": "ip-10-0-1-208.us-west-2.compute.internal",
            "private_ip": "10.0.1.208",
            "public_dns": "ec2-44-233-28-147.us-west-2.compute.amazonaws.com",
            "public_ip": "44.233.28.147",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_elasticIP_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-084b12090beb8ec18",
            "domain": "vpc",
            "id": "eipalloc-0e563f1949959ab1e",
            "network_interface": "eni-042f88f466ab95ce7",
            "private_dns": "ip-10-0-2-95.us-west-2.compute.internal",
            "private_ip": "10.0.2.95",
            "public_dns": "ec2-54-149-54-175.us-west-2.compute.amazonaws.com",
            "public_ip": "54.149.54.175",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:460996855651:internet-gateway/igw-0cd2267cdda563f99",
            "id": "igw-0cd2267cdda563f99",
            "owner_id": "460996855651",
            "tags": {
              "Name": "3TierApp-IGW"
            },
            "vpc_id": "vpc-095b826a935f965cd"
          },
          "dependencies": [
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:460996855651:listener/app/test-lb-tf/2b8305259df0857b/c24318002580996c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:460996855651:targetgroup/target-group/824d8ff5269f832e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:460996855651:listener/app/test-lb-tf/2b8305259df0857b/c24318002580996c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:460996855651:loadbalancer/app/test-lb-tf/2b8305259df0857b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_lb_target_group.target_group",
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.web_app_subnet_a",
            "aws_subnet.web_app_subnet_b",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:460996855651:targetgroup/target-group/824d8ff5269f832e",
            "arn_suffix": "targetgroup/target-group/824d8ff5269f832e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:460996855651:targetgroup/target-group/824d8ff5269f832e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-095b826a935f965cd"
          },
          "dependencies": [
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0758b80ccabf334d0",
            "id": "nat-07c7e72ea98c75ebb",
            "network_interface_id": "eni-01bebd8f58444935b",
            "private_ip": "10.0.1.208",
            "public_ip": "44.233.28.147",
            "subnet_id": "subnet-063a8603eea215bac",
            "tags": {
              "Name": "nat-a"
            }
          },
          "dependencies": [
            "aws_eip.nat_elasticIP_a",
            "aws_subnet.web_app_subnet_a",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e563f1949959ab1e",
            "id": "nat-00b818c69e5d36c85",
            "network_interface_id": "eni-042f88f466ab95ce7",
            "private_ip": "10.0.2.95",
            "public_ip": "54.149.54.175",
            "subnet_id": "subnet-01eafc3722717cc8f",
            "tags": {
              "Name": "nat-b"
            }
          },
          "dependencies": [
            "aws_eip.nat_elasticIP_b",
            "aws_subnet.web_app_subnet_b",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "subnet_route_table_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06a364673201519da",
            "owner_id": "460996855651",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-07c7e72ea98c75ebb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "subnet-route-table-a"
            },
            "vpc_id": "vpc-095b826a935f965cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_elasticIP_a",
            "aws_nat_gateway.nat_gateway_a",
            "aws_subnet.web_app_subnet_a",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "subnet_route_table_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0af89fef8a2003030",
            "owner_id": "460996855651",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-00b818c69e5d36c85",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "subnet-route-table-b"
            },
            "vpc_id": "vpc-095b826a935f965cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_elasticIP_b",
            "aws_nat_gateway.nat_gateway_b",
            "aws_subnet.web_app_subnet_b",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webapp_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ecb404f4310faa09",
            "owner_id": "460996855651",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cd2267cdda563f99",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "webapp-subnet-route-table"
            },
            "vpc_id": "vpc-095b826a935f965cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.webapp_vpc",
            "aws_internet_gateway.internet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "api_subnet_assocation_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a64b2fc0b26d64fd",
            "route_table_id": "rtb-06a364673201519da",
            "subnet_id": "subnet-0aeebfe88ba1d8cc7"
          },
          "dependencies": [
            "aws_vpc.webapp_vpc",
            "aws_eip.nat_elasticIP_a",
            "aws_nat_gateway.nat_gateway_a",
            "aws_route_table.subnet_route_table_a",
            "aws_subnet.application_subnet_a",
            "aws_subnet.web_app_subnet_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "api_subnet_assocation_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc16be29098c350c",
            "route_table_id": "rtb-0af89fef8a2003030",
            "subnet_id": "subnet-0ba55cca29eeb7ba4"
          },
          "dependencies": [
            "aws_eip.nat_elasticIP_b",
            "aws_nat_gateway.nat_gateway_b",
            "aws_route_table.subnet_route_table_b",
            "aws_subnet.application_subnet_b",
            "aws_subnet.web_app_subnet_b",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database_subnet_assocation_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfff8dcf1ec75d5c",
            "route_table_id": "rtb-06a364673201519da",
            "subnet_id": "subnet-0ad9c02afe46ba781"
          },
          "dependencies": [
            "aws_eip.nat_elasticIP_a",
            "aws_nat_gateway.nat_gateway_a",
            "aws_route_table.subnet_route_table_a",
            "aws_subnet.database_subnet_a",
            "aws_subnet.web_app_subnet_a",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database_subnet_assocation_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c407d56f9bcff9e",
            "route_table_id": "rtb-0af89fef8a2003030",
            "subnet_id": "subnet-083058aaea860587b"
          },
          "dependencies": [
            "aws_vpc.webapp_vpc",
            "aws_eip.nat_elasticIP_b",
            "aws_nat_gateway.nat_gateway_b",
            "aws_route_table.subnet_route_table_b",
            "aws_subnet.database_subnet_b",
            "aws_subnet.web_app_subnet_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webapp-subnet-association-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04207fe906bc0aa43",
            "route_table_id": "rtb-0ecb404f4310faa09",
            "subnet_id": "subnet-01eafc3722717cc8f"
          },
          "dependencies": [
            "aws_internet_gateway.internet",
            "aws_route_table.webapp_subnet_route_table",
            "aws_subnet.web_app_subnet_b",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webapp_subnet_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067f0788269b930b0",
            "route_table_id": "rtb-0ecb404f4310faa09",
            "subnet_id": "subnet-063a8603eea215bac"
          },
          "dependencies": [
            "aws_internet_gateway.internet",
            "aws_route_table.webapp_subnet_route_table",
            "aws_subnet.web_app_subnet_a",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:460996855651:security-group/sg-0d2ec541098efb9cf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2ec541098efb9cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220109231046800500000003",
            "name_prefix": null,
            "owner_id": "460996855651",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-095b826a935f965cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:460996855651:security-group/sg-0158e56acbd0b3af4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0158e56acbd0b3af4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0d2ec541098efb9cf"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20220109231049798800000004",
            "name_prefix": null,
            "owner_id": "460996855651",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-095b826a935f965cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "application_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:460996855651:subnet/subnet-0aeebfe88ba1d8cc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0aeebfe88ba1d8cc7",
            "map_public_ip_on_launch": false,
            "owner_id": "460996855651",
            "tags": {
              "Name": "private-app-subnet1"
            },
            "vpc_id": "vpc-095b826a935f965cd"
          },
          "dependencies": [
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "application_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:460996855651:subnet/subnet-0ba55cca29eeb7ba4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0ba55cca29eeb7ba4",
            "map_public_ip_on_launch": false,
            "owner_id": "460996855651",
            "tags": {
              "Name": "private-app-subnet2"
            },
            "vpc_id": "vpc-095b826a935f965cd"
          },
          "dependencies": [
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:460996855651:subnet/subnet-0ad9c02afe46ba781",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0ad9c02afe46ba781",
            "map_public_ip_on_launch": false,
            "owner_id": "460996855651",
            "tags": {
              "Name": "private-Database-subnet1"
            },
            "vpc_id": "vpc-095b826a935f965cd"
          },
          "dependencies": [
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:460996855651:subnet/subnet-083058aaea860587b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-083058aaea860587b",
            "map_public_ip_on_launch": false,
            "owner_id": "460996855651",
            "tags": {
              "Name": "private-Database-subnet2"
            },
            "vpc_id": "vpc-095b826a935f965cd"
          },
          "dependencies": [
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_app_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:460996855651:subnet/subnet-063a8603eea215bac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-063a8603eea215bac",
            "map_public_ip_on_launch": true,
            "owner_id": "460996855651",
            "tags": {
              "Name": "public-Web-subnet1"
            },
            "vpc_id": "vpc-095b826a935f965cd"
          },
          "dependencies": [
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_app_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:460996855651:subnet/subnet-01eafc3722717cc8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-01eafc3722717cc8f",
            "map_public_ip_on_launch": true,
            "owner_id": "460996855651",
            "tags": {
              "Name": "public-Web-subnet2"
            },
            "vpc_id": "vpc-095b826a935f965cd"
          },
          "dependencies": [
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "webapp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:460996855651:vpc/vpc-095b826a935f965cd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0619adb24f90c2b93",
            "default_route_table_id": "rtb-0e77b8d64ee8bed78",
            "default_security_group_id": "sg-02834ae31214d357d",
            "dhcp_options_id": "dopt-0c8ec7e869690d02d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-095b826a935f965cd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e77b8d64ee8bed78",
            "owner_id": "460996855651",
            "tags": {
              "Name": "3_Tier_App"
            }
          }
        }
      ]
    }
  ]
}